# gvmagDB

./: .gitignore  README.md  pixi.toml  pyproject.toml
dashboard/: gvmagdb-dashboard.service
dashboard/assets/: custom.css
docs/: CONTRIBUTING.md  Database_Schema.md  Database_Workflows.md  Deployment.md  Distribution_Workflow.md  Project_Structure.md  README.md  Repository_Guidelines.md  Skani_Integration.md
docs/releases/: README.md
src/gvmagdb/: __init__.py  __main__.py  cli.py
src/gvmagdb/analytics/: __init__.py  app.py  cache.py  config.py  data_access.py  layout.py
src/gvmagdb/analytics/pages/: __init__.py  annotations.py  clusters.py  environment.py  genome_stats.py  overview.py  taxonomy.py
src/gvmagdb/analyze/: analyze_genome.py  run_blastp.py  run_pyhmmer.py  run_skani.py  tnf_distance.py
src/gvmagdb/core/: catalog.py  registry.py  tnf.py
src/gvmagdb/export/: build_dmnd.py  export_faa.py  export_fna.py  extract_hits.py
src/gvmagdb/prepare/: ingest.py  ingest_parallel.py  parse_annotations.py
tests/: test_annotations.py  test_dashboard_import.py  test_schema.py
tests/data/: debug1.tsv  exact_cmd.tsv  queries.faa  query.fna  test_metadata.tsv  test_metadata_matched.tsv  test_query.fna  test_ref.fna  test_small.faa  with_ci.tsv
